# vesuvius-challenge-surface-detection

./: .gitignore  .monitor_env  5-EPOCH_DETECTOR_INDEX.md  ACTION_REQUIRED.md  ADAPTIVE_INTERVENTION_IMPROVEMENTS.md  BEFORE_AND_AFTER.md  CATASTROPHIC_DEGRADATION_FIX.md  CHANGES_SUMMARY.md  CLAUDE.md  CODE_CHANGES_DETAILED.md  COMPETITION_INFO.md  CONFIG_CHANGES_SUMMARY.md  CRITICAL_BUG_FIXES_JAN16.md  DEGRADATION_DETECTOR_SUMMARY.md  DETAILED_BUG_ANALYSIS.md  EVALUATION_REPORT_20260123.txt  FIX_IMPLEMENTATION.md  FIX_SUMMARY.txt  FOREGROUND_VARIATION_REPORT_20260123.txt  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_LOG_JAN17.md  IMPLEMENTATION_SUMMARY.md  INFERENCE_SUMMARY.md  LICENSE  MODEL_BIAS_FIX.md  MONITOR_SETUP.md  PLAN.md  PLATEAU_FIX_EXPLAINED.md  PROJECT_COMPREHENSIVE.md  QUICKSTART.txt  QUICK_REFERENCE.md  README.md  ROLLBACK_FIXES_JAN15.md  SAMPLE_INFERENCE_REPORT_20260123.txt  SCRIPT_DOCUMENTATION.md  SENDGRID_SETUP.md  SETUP.md  TRAINING_DIAGNOSIS.md  TRAINING_FIX.md  TRAINING_FIX_SUMMARY.md  (+23 more)
option_c_implementation/: train.py
topological-metrics-kaggle/: LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
topological-metrics-kaggle/scripts/: build_betti.sh  setup_submodules.sh
topological-metrics-kaggle/src/topometrics/: __init__.py  _bm_loader.py  leaderboard.py  toposcore.py  voi.py
